src/objects/Courses__c.object
<CustomObject>
    <fields>
        <fullName>Course_End_Date__c</fullName>
        <label>Course End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_Start_Date__c</fullName>
        <label>Course Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Course_Type__c</fullName>
        <label>Course Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Administrator Basic</fullName>
                </value>
                <value>
                    <fullName>Administrator Advanced</fullName>
                </value>
                <value>
                    <fullName>Administrator All In One</fullName>
                </value>
                <value>
                    <fullName>Developer Basic</fullName>
                </value>
                <value>
                    <fullName>Developer Advanced</fullName>
                </value>
                <value>
                    <fullName>Developer All In One</fullName>
                </value>
                <value>
                    <fullName>Marketing Cloud</fullName>
                </value>
                <value>
                    <fullName>Consultant Basic</fullName>
                </value>
                <value>
                    <fullName>Consultant Advanced</fullName>
                </value>
                <value>
                    <fullName>Consultant All In One</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_in_Progress__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is in Progress?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Group_Email__c</fullName>
        <label>Related Group Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Requested_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select company which requested that course</inlineHelpText>
        <label>Requested by</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Courses</relationshipLabel>
        <relationshipName>Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Course</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Course-{00000}</displayFormat>
        <label>Courses Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>